--- a/style/main.css
+++ b/style/main.css
@@ -58,7 +58,7 @@ body {
   margin: 0 auto;
   min-height: 100vh;
   font-family: "Poppins", sans-serif;
-  padding: 6rem 1.5rem 3.5rem;
+  padding: 6rem 1.5rem 3.5rem 1.5rem;
   display: grid;
   grid-template-columns: 1fr;
   gap: 4rem;
