--- a/style/main.css
+++ b/style/main.css
@@ -62,6 +62,7 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   gap: 4rem;
+  border: 5px solid black;
 }
 
 .header {
@@ -70,6 +71,7 @@ body {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+  border: 5px solid gold;
 }
 
 h1 {
@@ -83,6 +85,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  border: 5px solid blue;
 }
 
 .offer {
