--- a/style/main.scss
+++ b/style/main.scss
@@ -20,12 +20,14 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   gap: 4rem;
+  border: 5px solid black;
 }
 
 .header {
   color: white;
   text-align: center;
   height: fit-content;
+  border: 5px solid gold;
 }
 
 h1 {
@@ -39,6 +41,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  border: 5px solid blue;
 }
 
 .offer {
