--- a/style/main.scss
+++ b/style/main.scss
@@ -8,7 +8,8 @@ $color-blue--gray: hsl(246, 25%, 77%);
 @import "./reset";
 
 body {
-  background: url(../images/bg-intro-mobile.png), $color-red;
+  background-image: url(../images/bg-intro-desktop.png);
+  background-color: #0284c7;
 }
 
 .container {
@@ -31,6 +32,7 @@ body {
 
 h1 {
   font-size: 1.75rem;
+  font-size: clamp(1.75rem, 0.5rem + 4.166vw, 3rem);
   line-height: 1.25;
   margin-bottom: 0.75em;
 }
@@ -85,6 +87,7 @@ h1 {
   p {
     text-align: center;
     font-size: 0.625rem;
+    font-size: clamp(0.625rem, 0.5rem + 0.4166vw, 0.75rem);
     color: $color-blue--gray;
     padding: 0 1rem;
   }
@@ -145,12 +148,6 @@ h1 {
   }
 }
 
-@media (min-width: 30em) {
-  body {
-    background: url(../images/bg-intro-desktop.png), $color-red;
-  }
-}
-
 @media (min-width: 60em) {
   .container {
     max-width: 73.125rem;
@@ -163,16 +160,8 @@ h1 {
     text-align: left;
   }
 
-  h1 {
-    font-size: 3rem;
-  }
-
   .form {
     padding: 2rem;
     gap: 1.25rem;
-
-    p {
-      font-size: 0.75rem;
-    }
   }
 }
